# toric_earth

./: CMakeLists.txt  README.md  conanfile.txt  environment.h  main.cpp  map.h  object_loader.h  shadow_map.h  textures.h  torus.h
objects/: fish.mtl
shaders/: environment.fs  environment.vs  obj.fs  obj.vs  torus.fs  torus.vs
